[project]
name = "mpc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aditesh Kumar", email = "27091329+aramuk@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "click>=8.3.1",
    "crypten",
    "gymnasium[box2d]>=1.2.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "swig>=4.4.0",
    "torch<=2.3.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mpc2 = "mpc2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
crypten = { git = "https://github.com/aramuk/CrypTen.git" }
